<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FlightsInfoFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@color/green_300">
            <TextView
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/flight_id"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size"
                android:gravity="center"/>
            <TextView
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/scheduled_time"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size"
                android:gravity="center"/>
            <TextView
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/estimated_time"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size"
                android:gravity="center"/>
            <TextView
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/airline_company"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size"
                android:gravity="center"/>
            <TextView
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size"
                android:gravity="center"/>
            <TextView
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size"
                android:gravity="center"/>
            <TextView
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/gate"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size"
                android:gravity="center"/>
            <TextView
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/flight_status"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size"
                android:gravity="center"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/flight_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
</RelativeLayout>